fix: file extension links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Scoped Styles Dedupe Perf</title>
   </head>
   <body>
-    <a href="/list-scoping">List scoping</a>
-    <a href="/item-scoping">Item scoping</a>
+    <a href="/list-scoping.html">List scoping</a>
+    <a href="/item-scoping.html">Item scoping</a>
   </body>
 </html>
